fixing horizontal scroll overflow

--- a/web/static/styles/styles.css
+++ b/web/static/styles/styles.css
@@ -27,6 +27,7 @@ body {
 	padding-bottom: 70px; 
 	background-color: white;
 	font-family: Helvetica;
+	overflow-x: hidden;
 }
 
 .nopadding {
